syntax = "proto3";

package example;

import "google/protobuf/timestamp.proto";

option go_package = "gitlab.ozon.ru/example/api/example;example";

service Example {
  rpc ExampleRPC(ExampleRPCRequest) returns (ExampleRPCResponse) {};
}

enum ExampleEnum {
  ONE = 0;
  TWO = 1;
  THREE = 2;
}

message ExampleRPCRequest {
  message Emb { string field11 = 1; }
  ExampleEnum field1 = 1;
  Emb filed2 = 2;
  google.protobuf.Timestamp filed3 = 3;
}

message ExampleRPCResponse {}
